--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Carga.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Carga.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -8,50 +9,60 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.CargaController">
    <children>
-      <Label layoutX="29.0" layoutY="67.0" text="Carga de pedidos">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="67.0" layoutY="103.0" text="Id pedido:" />
-      <Label layoutX="29.0" layoutY="26.0" text="Sucursal:">
+      <Label layoutX="820.0" layoutY="29.0" text="Sucursal:">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label fx:id="sucursal" layoutX="103.0" layoutY="26.0" text="sucursal" />
-      <TextField fx:id="id_pedido" layoutX="173.0" layoutY="98.0" />
-      <Button layoutX="410.0" layoutY="95.0" mnemonicParsing="false" onAction="#handleCargarPedido" prefHeight="37.0" prefWidth="92.0" text="Cargar" />
-      <Label layoutX="23.0" layoutY="196.0" text="Patente camion:">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font></Label>
-      <ChoiceBox fx:id="patente_carga" layoutX="297.0" layoutY="190.0" prefHeight="31.0" prefWidth="187.0" />
-      <Button layoutX="248.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleVolverMenu" text="Volver al menu" />
-      <TableView fx:id="tabla_cargas" layoutX="600.0" layoutY="68.0" prefHeight="488.0" prefWidth="510.0">
+      <Label fx:id="sucursal" layoutX="894.0" layoutY="29.0" text="sucursal" />
+      <Button layoutX="491.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleCargaOptima" prefHeight="50.0" prefWidth="96.0" text="Cargar Optimo" />
+      <ChoiceBox fx:id="patente_carga" layoutX="259.0" layoutY="124.0" prefHeight="31.0" prefWidth="187.0" />
+      <TableView fx:id="tablaPedidosCargados" layoutX="653.0" layoutY="152.0" prefHeight="376.0" prefWidth="510.0">
         <columns>
           <TableColumn fx:id="id_pedidoColumn" prefWidth="128.0" text="ID" />
           <TableColumn fx:id="destinoColumn" prefWidth="129.0" text="Destino" />
-            <TableColumn fx:id="prioridadColumn" prefWidth="121.0" text="Prioridad" />
-            <TableColumn fx:id="volumenColumn" prefWidth="131.0" text="Volumen" />
+            <TableColumn fx:id="prioridadColumn" prefWidth="124.0" text="Prioridad" />
+            <TableColumn fx:id="volumenColumn" prefWidth="128.0" text="Volumen" />
         </columns>
       </TableView>
-      <Label layoutX="600.0" layoutY="30.0" text="Listado de pedidos disponibles para cargar:">
+      <ChoiceBox fx:id="sucursal_destino" layoutX="259.0" layoutY="224.0" prefHeight="31.0" prefWidth="187.0" />
+      <Button layoutX="1067.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleVolverMenu" prefHeight="56.0" prefWidth="96.0" text="Volver al Menu" />
+      <ImageView fitHeight="100.0" fitWidth="500.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../archivos/chilexplox.png" />
+         </image>
+      </ImageView>
+      <Separator layoutX="27.0" layoutY="101.0" prefHeight="0.0" prefWidth="1147.0" />
+      <Text layoutX="653.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Listado de pedidos cargados en camion" textAlignment="CENTER" wrappingWidth="510.0">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
-      </Label>
-      <Label fx:id="volumen" layoutX="297.0" layoutY="315.0" text="volumen" />
-      <Label layoutX="30.0" layoutY="316.0" text="Volumen disponible del camión:">
+      </Text>
+      <Text layoutX="48.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seleccione un camion en espera para ser cargado" wrappingWidth="194.767578125">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font size="14.0" />
          </font>
-      </Label>
-      <Label layoutX="23.0" layoutY="252.0" prefHeight="21.0" prefWidth="131.0" text="Sucursal destino:">
+      </Text>
+      <Text layoutX="44.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seleccione la sucursal de destino para el camion" wrappingWidth="194.767578125">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font size="14.0" />
          </font>
-      </Label>
-      <ChoiceBox fx:id="sucursal_destino" layoutX="297.0" layoutY="247.0" prefHeight="31.0" prefWidth="187.0" />
+      </Text>
+      <Separator layoutX="44.0" layoutY="176.0" prefHeight="3.0" prefWidth="543.0" />
+      <TableView fx:id="tablaPedidosPosibles" layoutX="44.0" layoutY="280.0" prefHeight="249.0" prefWidth="543.0">
+        <columns>
+          <TableColumn fx:id="id_pedidoColumn2" prefWidth="75.0" text="ID" />
+          <TableColumn fx:id="destinoColumn2" prefWidth="75.0" text="Destino" />
+            <TableColumn fx:id="prioridadColumn2" prefWidth="75.0" text="Prioridad" />
+            <TableColumn fx:id="volumenColumn2" prefWidth="75.0" text="Volumen" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Button layoutX="259.0" layoutY="541.0" mnemonicParsing="false" onAction="#handleCargaPedidoIndividual" prefHeight="40.0" prefWidth="126.0" text="Cargar pedido" />
+      <Button layoutX="849.0" layoutY="536.0" mnemonicParsing="false" onAction="#handleGuardarCambios" prefHeight="50.0" prefWidth="134.0" text="Guardar Cambios" />
+      <Text layoutX="44.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Si lo prefiere, puede cargar de manera manual" />
+      <Button layoutX="491.0" layoutY="196.0" mnemonicParsing="false" onAction="#handleCargaIndividual" prefHeight="50.0" prefWidth="96.0" text="Ver Pedidos" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
