--- a/Entrega 4/Chilexplox/src/chilexplox/view/ArrivoySalida.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/ArrivoySalida.fxml
@@ -44,5 +44,11 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Text>
+      <Label fx:id="sucursal" layoutX="904.0" layoutY="39.0" text="sucursal" />
+      <Label layoutX="830.0" layoutY="39.0" text="Sucursal:">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
