--- a/Entrega 4/Chilexplox/src/chilexplox/view/CamionDetalle.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/CamionDetalle.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="337.0" prefWidth="492.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="337.0" prefWidth="492.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.CamionDetalleController">
    <children>
       <GridPane gridLinesVisible="true" layoutX="43.0" layoutY="49.0" prefHeight="97.0" prefWidth="407.0">
         <columnConstraints>
@@ -22,12 +22,16 @@
          <children>
             <Label alignment="CENTER" prefHeight="16.0" prefWidth="201.0" text="Patente" />
             <Label alignment="CENTER" prefHeight="16.0" prefWidth="230.0" text="Capacidad Máxima" GridPane.rowIndex="1" />
-            <Label alignment="CENTER" prefHeight="16.0" prefWidth="230.0" text="Capacidad Actual" GridPane.rowIndex="2" />
+            <Label alignment="CENTER" prefHeight="16.0" prefWidth="230.0" text="Capacidad Disponible" GridPane.rowIndex="2" />
             <Label alignment="CENTER" prefHeight="16.0" prefWidth="230.0" text="Ubicación" GridPane.rowIndex="3" />
+            <Label fx:id="patente" alignment="CENTER" prefHeight="16.0" prefWidth="295.0" text="Sin Datos" GridPane.columnIndex="1" />
+            <Label fx:id="capacidadMax" alignment="CENTER" prefHeight="16.0" prefWidth="295.0" text="Sin Datos" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="capacidadDisponible" alignment="CENTER" prefHeight="16.0" prefWidth="295.0" text="Sin Datos" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="ubicacion" alignment="CENTER" prefHeight="16.0" prefWidth="295.0" text="Sin Datos" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
       <Button layoutX="288.0" layoutY="264.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="119.0" text="Volver al menu" />
-      <Button layoutX="55.0" layoutY="264.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="119.0" text="Ver Viaje" />
+      <Button fx:id="btnViaje" layoutX="55.0" layoutY="264.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="119.0" text="Ver Viaje" />
       <GridPane gridLinesVisible="true" layoutX="43.0" layoutY="183.0" prefHeight="64.0" prefWidth="407.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="196.0" />
@@ -42,6 +46,9 @@
             <Label alignment="CENTER" prefHeight="16.0" prefWidth="230.0" text="Radioctivos" />
             <Label alignment="CENTER" prefHeight="16.0" prefWidth="230.0" text="Fragiles" GridPane.rowIndex="1" />
             <Label alignment="CENTER" prefHeight="16.0" prefWidth="230.0" text="Refrigerados" GridPane.rowIndex="2" />
+            <Label fx:id="radioctivo" alignment="CENTER" prefHeight="16.0" prefWidth="295.0" text="No" GridPane.columnIndex="1" />
+            <Label fx:id="fragil" alignment="CENTER" prefHeight="16.0" prefWidth="295.0" text="No" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="refrigerado" alignment="CENTER" prefHeight="16.0" prefWidth="295.0" text="No" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <Label layoutX="41.0" layoutY="161.0" prefHeight="16.0" prefWidth="230.0" text="Puede llevar pedidos:" />
