--- a/Entrega 4/Chilexplox/src/chilexplox/view/ArrivoySalida.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/ArrivoySalida.fxml
@@ -10,7 +10,7 @@
 <AnchorPane prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.ArrivoySalidaController">
    <children>
       <Button layoutX="1037.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleVolverMenu" prefHeight="56.0" prefWidth="96.0" text="Volver al Menu" textAlignment="CENTER" wrapText="true" />
-      <Button layoutX="211.0" layoutY="521.0" mnemonicParsing="false" onAction="#handleAvisarArribo" prefHeight="65.0" prefWidth="129.0" text="Avisar Arribo" />
+      <Button layoutX="108.0" layoutY="521.0" mnemonicParsing="false" onAction="#handleAvisarArribo" prefHeight="65.0" prefWidth="129.0" text="Avisar Arribo" />
       <Button layoutX="832.0" layoutY="521.0" mnemonicParsing="false" onAction="#handleAvisarSalida" prefHeight="65.0" prefWidth="115.0" text="Avisar Salida" />
       <TableView fx:id="tabla_enTransito" layoutX="27.0" layoutY="168.0" prefHeight="341.0" prefWidth="506.0">
         <columns>
@@ -50,5 +50,6 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
+      <Button layoutX="289.0" layoutY="521.0" mnemonicParsing="false" onAction="#handleRetornoCamion" prefHeight="65.0" prefWidth="129.0" text="Camión con Incovenientes. Retornar" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
