--- a/Entrega 4/Chilexplox/src/chilexplox/view/Menu.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/Menu.fxml
@@ -7,47 +7,48 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
    <children>
       <ImageView fitHeight="150.0" fitWidth="500.0" layoutX="4.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../archivos/chilexplox.png" />
          </image>
       </ImageView>
-      <Text layoutX="522.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenido">
+      <Text layoutX="670.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenido">
          <font>
             <Font size="14.0" />
          </font>
       </Text>
-      <Label fx:id="nombre" layoutX="602.0" layoutY="25.0" text="Nombre">
+      <Label fx:id="nombre" layoutX="750.0" layoutY="23.0" text="Nombre">
          <font>
             <Font size="14.0" />
          </font></Label>
-      <Text layoutX="522.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rol">
+      <Text layoutX="670.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rol">
          <font>
             <Font size="14.0" />
          </font>
       </Text>
-      <Label fx:id="rol" layoutX="602.0" layoutY="58.0" text="Rol">
+      <Label fx:id="rol" layoutX="750.0" layoutY="56.0" text="Rol">
          <font>
             <Font size="14.0" />
          </font></Label>
-      <Text layoutX="522.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sucursal">
+      <Text layoutX="670.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sucursal">
          <font>
             <Font size="14.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="sucursales" layoutX="602.0" layoutY="88.0" prefWidth="150.0" />
-      <Separator layoutX="2.0" layoutY="133.0" prefHeight="3.0" prefWidth="792.0" />
+      <ChoiceBox fx:id="sucursales" layoutX="750.0" layoutY="86.0" prefWidth="150.0" />
+      <Separator layoutX="59.0" layoutY="136.0" prefHeight="3.0" prefWidth="868.0" />
       <Button fx:id="btnPedidos" disable="true" layoutX="55.0" layoutY="155.0" mnemonicParsing="false" onAction="#handlePedidos" prefHeight="95.0" prefWidth="142.0" text="Ingresar o Editar Pedidos" textAlignment="CENTER" wrapText="true" />
       <Button fx:id="btnDetallePedido" layoutX="239.0" layoutY="155.0" mnemonicParsing="false" onAction="#handleDetallePedidos" prefHeight="95.0" prefWidth="142.0" text="Ver Detalles Pedido" textAlignment="CENTER" wrapText="true" />
-      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="239.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleMensaje" prefHeight="103.0" prefWidth="142.0" text="Enviar Mensaje" textAlignment="CENTER" wrapText="true" />
-      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="423.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleBandejaDeEntrada" prefHeight="103.0" prefWidth="150.0" text="Bandeja de Entrada" textAlignment="CENTER" wrapText="true" />
-      <Button fx:id="btnArrivoSalida" disable="true" layoutX="51.0" layoutY="290.0" mnemonicParsing="false" onAction="#handleArrivoSalida" prefHeight="103.0" prefWidth="150.0" text="Avisar Arribo o Salida Camiones" textAlignment="CENTER" wrapText="true" />
-      <Button fx:id="btnCarga" disable="true" layoutX="423.0" layoutY="155.0" mnemonicParsing="false" onAction="#handleCarga" prefHeight="95.0" prefWidth="150.0" text="Cargar Camiones" />
-      <Button fx:id="btnDescarga" disable="true" layoutX="602.0" layoutY="155.0" mnemonicParsing="false" onAction="#handleDescarga" prefHeight="95.0" prefWidth="150.0" text="Descargar Camiones" textAlignment="CENTER" wrapText="true" />
-      <Button layoutX="628.0" layoutY="483.0" mnemonicParsing="false" onAction="#handleSalir" prefHeight="89.0" prefWidth="132.0" text="Salir" />
-      <Button fx:id="btnDetalleCamion" disable="true" layoutX="602.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleDetalleCamion" prefHeight="103.0" prefWidth="150.0" text="Consultar Estado Camión" textAlignment="CENTER" wrapText="true" />
-      <Button fx:id="btnReportes" layoutX="51.0" layoutY="417.0" mnemonicParsing="false" onAction="#handleGenerarReporteGanancias" prefHeight="103.0" prefWidth="150.0" text="Generar Reporte de Ganancias" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="239.0" layoutY="290.0" mnemonicParsing="false" onAction="#handleMensaje" prefHeight="95.0" prefWidth="142.0" text="Enviar Mensaje" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="423.0" layoutY="292.0" mnemonicParsing="false" onAction="#handleBandejaDeEntrada" prefHeight="95.0" prefWidth="142.0" text="Bandeja de Entrada" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnArrivoSalida" disable="true" layoutX="55.0" layoutY="290.0" mnemonicParsing="false" onAction="#handleArrivoSalida" prefHeight="95.0" prefWidth="142.0" text="Avisar Arribo o Salida Camiones" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnCarga" disable="true" layoutX="423.0" layoutY="155.0" mnemonicParsing="false" onAction="#handleCarga" prefHeight="95.0" prefWidth="142.0" text="Cargar Camiones" />
+      <Button fx:id="btnDescarga" disable="true" layoutX="602.0" layoutY="155.0" mnemonicParsing="false" onAction="#handleDescarga" prefHeight="95.0" prefWidth="142.0" text="Descargar Camiones" textAlignment="CENTER" wrapText="true" />
+      <Button layoutX="785.0" layoutY="474.0" mnemonicParsing="false" onAction="#handleSalir" prefHeight="95.0" prefWidth="142.0" text="Salir" />
+      <Button fx:id="btnDetalleCamion" disable="true" layoutX="785.0" layoutY="155.0" mnemonicParsing="false" onAction="#handleDetalleCamion" prefHeight="95.0" prefWidth="142.0" text="Consultar Estado Camión" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnReportes" layoutX="602.0" layoutY="292.0" mnemonicParsing="false" onAction="#handleGenerarReporteGanancias" prefHeight="95.0" prefWidth="142.0" text="Generar Reporte de Ganancias" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnErrores" layoutX="785.0" layoutY="292.0" mnemonicParsing="false" onAction="#handleRegistroErrores" prefHeight="95.0" prefWidth="142.0" text="Ver Registro de Errores" />
    </children>
 </AnchorPane>
